--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -80,7 +80,7 @@
   margin-left: 10px;
 }
 #narrow{
-  margin-top: 13px;
+  vertical-align: middle;
   width: 9px;
   height: 12px;
   position: absolute;
@@ -97,7 +97,7 @@
   position: absolute;
   margin-right: 30px;
   right: 0;
-  margin-top: 12px;
+  line-height: 40px;
 }
 #switch{
   margin-top: 5px;
